--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,9 +1,12 @@
-<script type="text/x-mathjax-config">
-  MathJax.Hub.Config({
-    tex2jax: {
-      inlineMath: [['\\(','\\)']],
-      displayMath: [['$$','$$']],
-      processEscapes: true
+<script type="text/javascript">
+  MathJax = {
+    tex: {
+      inlineMath: [['\\(', '\\)']],
+      displayMath: [['$$', '$$']]
     }
-  });
+  };
 </script>
+<script id="MathJax-script" async
+  src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+</script>
+
