--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,17 +1,18 @@
-<script type="text/javascript">
+<script>
   window.MathJax = {
     tex: {
       inlineMath: [['\\(', '\\)']],
-      displayMath: [['$$','$$'], ['\\[', '\\]']],
-      processEscapes: true,
-      tags: 'ams'
+      displayMath: [['\\[', '\\]'], ['$$', '$$']],
+      processEscapes: true
     },
     options: {
       skipHtmlTags: ['script', 'noscript', 'style', 'textarea', 'pre'],
+      ignoreHtmlClass: 'tex2jax_ignore',
+      processHtmlClass: 'tex2jax_process'
     }
   };
 </script>
-
 <script async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+
 
 
