--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,6 @@ layout: null
     {% include head/custom.html %}
   </head>
   <body>
-    {{ content }}
+      {% include comments.html %}
   </body>
 </html>
