--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,8 @@ layout: null
     {% include head/custom.html %}
   </head>
   <body>
-      {% include comments.html %}
+    {{ content }}
+
+    {% include comments.html %}
   </body>
 </html>
