--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -13,6 +13,8 @@
   };
 </script>
 <script async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+<link rel="icon" href="{{ '/assets/images/favicon.jpg' | relative_url }}" type="image/jpg">
+
 
 
 
