--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -13,6 +13,8 @@
   };
 </script>
 <script async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+
+<!-- Favicon -->
 <link rel="icon" href="{{ '/assets/images/favicon.jpg' | relative_url }}" type="image/jpg">
 
 <!-- SEO meta tags -->
@@ -32,7 +34,11 @@
 <meta name="twitter:description" content="A physics blog exploring quantum mechanics, relativity, and cosmology.">
 <meta name="twitter:image" content="https://mohidfarhan.github.io/assets/images/photo.jpg">
 
-
-
-
-
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VTKS1BDDYK"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-VTKS1BDDYK');
+</script>
